tests/baselines/reference/assignmentCompatWithNumericIndexer.errors.txt
==== tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithNumericIndexer.ts (6 errors) ====
    // Derived type indexer must be subtype of base type indexer
    
    interface Base { foo: string; }
    interface Derived extends Base { bar: string; }
    interface Derived2 extends Derived { baz: string; }
    
    class A {
        [x: number]: Base;
    }
    
    var a: A;
    var b: { [x: number]: Derived; }
    a = b;
    b = a; // error
    ~
!!! error TS2322: Type 'A' is not assignable to type '{ [x: number]: Derived; }':
!!! error TS2322:   Index signatures are incompatible:
!!! error TS2322:     Type 'Base' is not assignable to type 'Derived':
!!! error TS2322:       Property 'bar' is missing in type 'Base'.
    
    var b2: { [x: number]: Derived2; }
    a = b2;
    b2 = a; // error
    ~~
!!! error TS2322: Type 'A' is not assignable to type '{ [x: number]: Derived2; }':
!!! error TS2322:   Index signatures are incompatible:
!!! error TS2322:     Type 'Base' is not assignable to type 'Derived2':
!!! error TS2322:       Property 'baz' is missing in type 'Base'.
    
    module Generics {
        class A<T extends Base> {
            [x: number]: T;
        }
    
        class B extends A<Base> {
            [x: number]: Derived; // ok
        }
    
        function foo<T extends Base>() {
            var a: A<T>;
            var b: { [x: number]: Derived; }
            a = b; // error
            ~
!!! error TS2322: Type '{ [x: number]: Derived; }' is not assignable to type 'A<T>':
!!! error TS2322:   Index signatures are incompatible:
!!! error TS2322:     Type 'Derived' is not assignable to type 'T'.
            b = a; // error
            ~
!!! error TS2322: Type 'A<T>' is not assignable to type '{ [x: number]: Derived; }':
!!! error TS2322:   Index signatures are incompatible:
!!! error TS2322:     Type 'T' is not assignable to type 'Derived':
!!! error TS2322:       Property 'bar' is missing in type 'Base'.
    
            var b2: { [x: number]: Derived2; }
            a = b2; // error
            ~
!!! error TS2322: Type '{ [x: number]: Derived2; }' is not assignable to type 'A<T>':
!!! error TS2322:   Index signatures are incompatible:
!!! error TS2322:     Type 'Derived2' is not assignable to type 'T'.
            b2 = a; // error
            ~~
!!! error TS2322: Type 'A<T>' is not assignable to type '{ [x: number]: Derived2; }':
!!! error TS2322:   Index signatures are incompatible:
!!! error TS2322:     Type 'T' is not assignable to type 'Derived2':
!!! error TS2322:       Property 'baz' is missing in type 'Base'.
    
            var b3: { [x: number]: T; }
            a = b3; // ok
            b3 = a; // ok
        }
    }